# swagger/schema/upload.schema.js
@@ -5,6 +5,10 @@ const UploadSchema = {
     UploadRequestModel: {
         type: 'object',
         properties: {
+            fileType: {
+                type: 'string',
+                enum: ['image', 'video']
+            },
             path: {
                 type: 'string',
                 enum: ['user', 'course']
