# swagger_output.json
@@ -5280,6 +5280,13 @@
       "UploadRequestModel": {
         "type": "object",
         "properties": {
+          "fileType": {
+            "type": "string",
+            "enum": [
+              "image",
+              "video"
+            ]
+          },
           "path": {
             "type": "string",
             "enum": [
